--- a/esphome/esphome.yaml
+++ b/esphome/esphome.yaml
@@ -8,7 +8,7 @@ esphome:
     level: 'INFO'
 
 
-  # debug fields
+  # debug fields (requires ESPHOME_DEBUG to be set to True or 1
   #  debug.create_bucket    creates the InfluxDB2 bucket if it does not exist
   #  debug.delete_bucket    deletes the bucket if it exists
   debug:
