--- a/example.secrets.yaml
+++ b/example.secrets.yaml
@@ -1,12 +1,12 @@
-# CircuitSetup ESPHome secrets
+# CircuitSetup/ESPHome secrets
 
 # InfluxDB2 credentials
-esphome_influxdb2_org: 'your-org'
-esphome_influxdb2_bucket: 'cs24'
-esphome_influxdb2_url: '192.168.0.32:8086'
-esphome_influxdb2_token: 'your-token'
+influxdb2_org: 'your-org'
+influxdb2_bucket: 'cs_esp'
+influxdb2_url: '192.168.0.32:8086'
+influxdb2_token: 'your-token'
 
 # ESPHome API credentials
-esphome_url:        '192.168.0.30'
-esphome_port:       6053
-esphome_password:   ''
+circuitsetup.url:        '192.168.0.30'
+circuitsetup.port:       6053
+circuitsetup.password:   ''
