--- a/esphome/cs_esp.yaml
+++ b/esphome/cs_esp.yaml
@@ -1,14 +1,7 @@
-# YAML configuration file for configuring the esphome software to connect to the
+# YAML configuration file for configuring the application to connect to the
 # ESPHome API and subscribe to energy sensor updates from the CircuitSetup hardware.
-esphome:
-  # Application log file customization, logging levels are 'INFO', 'WARN', and 'ERROR'
-  log:
-    file: 'log/esphome'
-    format: '[%(asctime)s] [%(module)s] [%(levelname)s] %(message)s'
-    level: 'INFO'
-
-
-  # debug fields (requires ESPHOME_DEBUG to be set to True or 1 to be in effect)
+cs_esp:
+  # debug fields (requires CS_ESP_DEBUG to be set to True or 1 to be in effect)
   #  debug.create_bucket    creates the InfluxDB2 bucket if it does not exist
   #  debug.delete_bucket    deletes the bucket if it exists
   debug:
@@ -21,25 +14,24 @@ esphome:
   #   circuitsetup.port       optional ESPHome API port, defaults to 6053 ('int')
   #   circuitsetup.password   optional ESPHome API password, defaults to '' ('str')
   circuitsetup:
-    url:          !secret esphome_url
-    port:         !secret esphome_port
-    password:     !secret esphome_password
+    url:          !secret circuitsetup_url
+    port:         !secret circuitsetup_port
+    password:     !secret circuitsetup_password
 
   # InfluxDB setup
-  # The InfluxDB interface uses the newer 2.0 client which supports both the 2.0 and 1.8.x InfluxDB versions
-  # with just minor changes in the following options.
+  # The InfluxDB interface requires the following options.
   #   influxdb2.enable        set to True to enable InfluxDB output ('bool')
   #   influxdb2.bucket        set to the InfluxDB bucket ('str')
   #   influxdb2.url           set to the InfluxDB server URL and port ('str')
   #   influxdb2.org           set to the v2 organization ('str')
   #   influxdb2.token         set to a valid v2 token ('str')
   influxdb2:
-    org:    !secret esphome_influxdb2_org
-    url:    !secret esphome_influxdb2_url
-    bucket: !secret esphome_influxdb2_bucket
-    token:  !secret esphome_influxdb2_token
+    org:    !secret influxdb2_org
+    url:    !secret influxdb2_url
+    bucket: !secret influxdb2_bucket
+    token:  !secret influxdb2_token
 
-  # esphome settings
+  # CS/ESPHome settings
   # Allows some settings to be modified without editing the code
   # settings.sampling defines how often the various processing loops run
   #   settings.sampling.integrations    sets period (in seconds) for updating integrations (int)
@@ -47,7 +39,7 @@ esphome:
   settings:
     sampling:
       integrations: 10
-      deletions:    3600
+      deletions:    86400
 
   # Sensor setup
   # Sensors are a list of one or more sensors in the ESPHome subscription.
