--- a/example.secrets.yaml
+++ b/example.secrets.yaml
@@ -2,7 +2,7 @@
 
 # InfluxDB2 credentials
 influxdb2_org: 'your-org'
-influxdb2_bucket: 'cs_esp'
+influxdb2_bucket: 'cs_esphome'
 influxdb2_url: '192.168.0.32:8086'
 influxdb2_token: 'your-token'
 
