--- a/cs_esphome/cs_esphome.yaml
+++ b/cs_esphome/cs_esphome.yaml
@@ -2,14 +2,13 @@
 # ESPHome API and subscribe to energy sensor updates from the CircuitSetup hardware.
 cs_esphome:
   # debug fields (requires CS_ESPHOME_DEBUG to be set to True or 1 to be in effect)
-  #  debug.create_bucket    creates the InfluxDB2 bucket if it does not exist
-  #  debug.delete_bucket    deletes the bucket if it exists
+  #  debug.create_bucket    creates the InfluxDB2 bucket if it does not exist (bool)
+  #  debug.delete_bucket    deletes the bucket if it exists (bool)
+  #  debug.fill_data        fills in today/month/year energy fields to 0 (bool)
   #
-  #  This option can fill in the today/month/year energy records to make your long-term
+  #  This last option can fill in the today/month/year energy records to make your long-term
   #  Grafana graphs filled.  Use a smart fill in queries the database for the first entry
   #  so not to overwrite any existing entries.  Will fill in a 13 months worth of data.
-  #  .
-  #  debug.fill_data        fills in today/month/year energy fields to 0
   debug:
     create_bucket:  False
     delete_bucket:  False
@@ -42,11 +41,9 @@ cs_esphome:
   # Allows some settings to be modified without editing the code
   # settings.sampling defines how often the various processing loops run
   #   settings.sampling.integrations    sets period (in seconds) for updating integrations (int)
-  #   settings.sampling.deletions       sets period (in seconds) for database deletions (int)
   settings:
     sampling:
       integrations: 10
-      deletions:    86400
 
   # Sensor setup
   # Sensors are a list of one or more sensors in the ESPHome subscription.
