bug fix for settings.watchdog

--- a/cs_esphome/cs_esphome.yaml
+++ b/cs_esphome/cs_esphome.yaml
@@ -98,8 +98,8 @@ cs_esphome:
         location:       ''
         integrate:      True
     - sensor:
-        sensor_name:    'cs24_w_metered'
-        display_name:   'Metered circuits watts'
+        sensor_name:    'cs24_metered_w'
+        display_name:   'Metered circuits'
         measurement:    'power'
         device:         'metered'
         location:       ''
