--- a/cs_esphome/cs_esphome.yaml
+++ b/cs_esphome/cs_esphome.yaml
@@ -14,6 +14,11 @@ cs_esphome:
     delete_bucket:  False
     fill_data:      False
 
+  # This option is used the current meter reading
+  meter:
+    enable_setting: False
+    value:          -4580
+
   # ESPHome API fields
   # These options are used to login into the ESPHome API to collect the sensor data.
   #   circuitsetup.url        set to the ESPHome API url ('str')
