--- a/cs_esphome/cs_esphome.yaml
+++ b/cs_esphome/cs_esphome.yaml
@@ -2,8 +2,8 @@
 # ESPHome API and subscribe to energy sensor updates from the CircuitSetup hardware.
 cs_esphome:
   # debug fields (requires CS_ESPHOME_DEBUG to be set to True or 1 to be in effect)
-  #  debug.create_bucket    creates the InfluxDB2 bucket if it does not exist (bool)
   #  debug.delete_bucket    deletes the bucket if it exists (bool)
+  #  debug.create_bucket    creates the InfluxDB2 bucket if it does not exist (bool)
   #  debug.recreate_tasks   remove all InfluxDB tasks and create new ones (bool)
   #  debug.fill_data        fills in today/month/year energy fields to 0 (bool)
   #
@@ -11,8 +11,8 @@ cs_esphome:
   #  Grafana graphs filled.  Use a smart fill in queries the database for the first entry
   #  so not to overwrite any existing entries.  Will fill in a 13 months worth of data.
   debug:
-    create_bucket:  False
     delete_bucket:  False
+    create_bucket:  False
     recreate_tasks: False
     fill_data:      False
 
@@ -48,11 +48,13 @@ cs_esphome:
   # Allows some settings to be modified without editing the code
   # settings.sampling defines how often the various processing loops run
   #   settings.sampling.integrations    period (seconds) for updating integrations (int)
+  #   settings.sampling.queries         period (seconds) for updating CS/ESPHome database queries (int)
   #   settings.watchdog                 override the default watchdog timer timeout (int)
   settings:
     sampling:
       integrations: 30
-    watchdog:   30
+      queries:      30
+    watchdog:       30
 
   # Sensor setup
   # Sensors are a list of one or more sensors in the ESPHome subscription.
