--- a/cs_esphome/cs_esphome.yaml
+++ b/cs_esphome/cs_esphome.yaml
@@ -11,9 +11,9 @@ cs_esphome:
   #  Grafana graphs filled.  Use a smart fill in queries the database for the first entry
   #  so not to overwrite any existing entries.  Will fill in a 13 months worth of data.
   debug:
-    delete_bucket:  True
-    create_bucket:  True
-    recreate_tasks: True
+    delete_bucket:  False
+    create_bucket:  False
+    recreate_tasks: False
     fill_data:      False
 
   # This option is used to set the current meter reading (at midnight or if not adjust for the
@@ -49,13 +49,23 @@ cs_esphome:
   # Allows some settings to be modified without editing the code
   # settings.sampling defines how often the various processing loops run
   #   settings.sampling.integrations    period (seconds) for updating integrations (int)
-  #   settings.sampling.queries         period (seconds) for updating CS/ESPHome database queries (int)
+  #   settings.sampling.queries   ###      period (seconds) for updating CS/ESPHome database queries (int)
   #   settings.sampling.delta_wh        period (seconds) for updating CS/ESPHome delta_wh entries (int)
   #   settings.watchdog                 override the default watchdog timer timeout (int)
   settings:
     sampling:
-      integrations: 60
-      queries:      60
+      integrations:
+        today:      60
+        month:      300
+        year:       600
+      locations:
+        today:      20
+        month:      300
+        year:       600
+      queries:
+        today:      60
+        month:      300
+        year:       600
       delta_wh:     600
     watchdog:       30
 
